.metadata/.plugins/org.eclipse.cdt.ui/LEDBlink.build.log
14:12:06 **** Incremental Build of configuration Debug for project LEDBlink ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F051x8 -DDEBUG -c -I../Core/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:106:24: error: 'GPIOG' undeclared (first use in this function); did you mean 'GPIOD'?
    HAL_GPIO_TogglePin (GPIOG, GPIO_PIN_13);
                        ^~~~~
                        GPIOD
../Core/Src/main.c:106:24: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:89:8: warning: unused variable 'txData' [-Wunused-variable]
   char txData[40] = "Hello from Aditya \r\n";
        ^~~~~~
make: *** [Core/Src/subdir.mk:33: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

14:12:06 Build Failed. 2 errors, 1 warnings. (took 781ms)

